<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_survey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.roptutorial.SurveyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title"
        android:textColor="@color/colorPrimary"
        android:textSize="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:text="@string/description_of_survey"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <TextView
        style="@style/question"
        android:text="@string/premature_birth" />

    <RadioGroup
        android:id="@+id/premature_birth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <RadioButton
            android:id="@+id/premature_birth_button_yes"
            style="@style/radio_button"
            android:paddingRight="16dp"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/premature_birth_button_no"
            style="@style/radio_button"
            android:text="No" />

    </RadioGroup>

    <TextView
        style="@style/question"
        android:text="@string/tutorial" />

    <RadioGroup
        android:id="@+id/tutorial_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <RadioButton
            android:id="@+id/tutorial_yes"
            style="@style/radio_button"
            android:paddingRight="16dp"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/tutorial_no"
            style="@style/radio_button"
            android:text="No" />

    </RadioGroup>

    <TextView
        style="@style/question"
        android:text="@string/fits_you_more" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/expecting_child_checkbox"
                style="@style/checkbox" />

            <TextView
                style="@style/text_checkbox"
                android:text="@string/expecting_child" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/premature_newborn_checkbox"
                style="@style/checkbox" />

            <TextView
                style="@style/text_checkbox"
                android:text="@string/has_a_premature_child" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/know_someone_checkbox"
                style="@style/checkbox" />

            <TextView
                style="@style/text_checkbox"
                android:text="@string/knows_someone" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/submit_survey_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimaryDark"
                android:padding="16dp"
                android:text="Submit"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
